--- a/ios-developer.html
+++ b/ios-developer.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698532533-ios-senior-engineer-mobile-developer-experience'>Square iOS Senior Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698532533-ios-senior-engineer-mobile-developer-experience'>Square iOS Senior Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -120,7 +120,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999697957599-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999697957599-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Somerville United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -152,7 +152,7 @@
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
@@ -179,7 +179,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/3628cc51-a2d0-4c12-96e8-22063df92e9e'>System1 - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/system1/3628cc51-a2d0-4c12-96e8-22063df92e9e'>System1 - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -189,7 +189,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=9216EAF99.0'>
+<h5><a href='https://www.applythis.net/job/?a=9216EAF99.0'>
 	
     Apply for iOS Developer -  Norwich, United Kingdom - IT and Internet - iOS-Eoezvh-George - Find a job, build a career
 
@@ -261,7 +261,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
+<h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -293,7 +293,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/432562-senior-android-developer-m-f-d'>Job @ endios (Hamburg): Senior Android Developer (... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/432562-senior-android-developer-m-f-d'>Job @ endios (Hamburg): Senior Android Developer (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -341,7 +341,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692008325-hiring-ios-developer'>Dalitso Consulting Hiring: iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692008325-hiring-ios-developer'>Dalitso Consulting Hiring: iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South Africa</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -353,7 +353,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697103227-ios-developer-yogyakarta-indonesia-'>A Job Thing iOS Developer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697103227-ios-developer-yogyakarta-indonesia-'>A Job Thing iOS Developer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -377,7 +377,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studentbeans.workable.com/j/D8A66824E5'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://studentbeans.workable.com/j/D8A66824E5'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Manchester England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -398,7 +398,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Northern Ostrobothnia, Finland</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oura-health-ltd.workable.com/j/4F5BC08628'>Oura Health Ltd - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://oura-health-ltd.workable.com/j/4F5BC08628'>Oura Health Ltd - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Helsinki, Uusimaa, Finland</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -414,7 +414,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -433,7 +433,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 Software Development. Full-time. Apply for this job. TradeRev is an online 
 automotive?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tulip/71c3f977-cc99-417f-a927-8e710a94bb37'>Tulip Retail - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/tulip/71c3f977-cc99-417f-a927-8e710a94bb37'>Tulip Retail - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -445,7 +445,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
+<h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
